--- a/index.html
+++ b/index.html
@@ -24,37 +24,38 @@
         <div class="input-group mb-3">
                 <input type="text" class="form-control input1" placeholder="Enter 1st state" aria-label="Recipient's username" aria-describedby="button-addon2" id="state">
                 <div class="input-group-append">
-                  <button class="btn btn-secondary toggle-graph" data-graph-index="2" type="button" id="button-addon2" onclick="g(); f()">Click!</button>
+                  <button class="btn btn-secondary toggle-graph" data-graph-index="2" type="button" id="button-addon2" onclick="g(); f();fw()">Click!</button>
                 </div>
         </div>
         <div class="input-group mb-3">
                 <input type="text" class="form-control input1" placeholder="Enter 2nd state" aria-label="Recipient's username" aria-describedby="button-addon2" id="state1">
                 <div class="input-group-append">
-                  <button class="btn btn-secondary" type="button" id="button-addon2" onclick="f2(); g2()">Click</button>
+                  <button class="btn btn-secondary" type="button" id="button-addon2" onclick="f2(); g2(); fw2()">Click</button>
                 </div>
         </div>
         <div class="input-group mb-3">
                 <input type="text" class="form-control input1" placeholder="Enter 3rd state" aria-label="Recipient's username" aria-describedby="button-addon2" id="state2">
                 <div class="input-group-append">
-                  <button class="btn btn-secondary" type="button" id="button-addon2" onclick="f3(); g3()">Click</button>
+                  <button class="btn btn-secondary" type="button" id="button-addon2" onclick="f3(); g3();fw3()">Click</button>
                 </div>
         </div>
         <div class="input-group mb-3">
                 <input type="text" class="form-control input1" placeholder="Enter 4th state" aria-label="Recipient's username" aria-describedby="button-addon2" id="state3">
                 <div class="input-group-append">
-                  <button class="btn btn-secondary" type="button" id="button-addon2" onclick="f4(); g4()">Click</button>
+                  <button class="btn btn-secondary" type="button" id="button-addon2" onclick="f4(); g4(); fw4() ">Click</button>
                 </div>
         </div>
         <div class="input-group mb-3">
                 <input type="text" class="form-control input1" placeholder="Enter 5th state" aria-label="Recipient's username" aria-describedby="button-addon2" id="state4">
                 <div class="input-group-append">
-                  <button class="btn btn-secondary" type="button" id="button-addon2" onclick="f5(); g5()">Click</button>
+                  <button class="btn btn-secondary" type="button" id="button-addon2" onclick="f5(); g5(); fw5()">Click</button>
                 </div>
         </div>
         </div>
       </div>
         <div  id="graph1" style="display:none ;margin-bottom:50px"><div id="container1" style="min-width: 310px; height: 400px; margin: 0 auto;"></div></div>
         <div id="graph2" style="display:none"><div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div></div>
+        <div id="graphsw" style="display:none"><div id="container2" style="min-width: 310px; height: 400px; margin: 0 auto"></div></div>
         <div style="height:40px; text-align:center;background-color:bisque;margin-bottom:15px; margin-top:50px;"><h2>Enter state name for complete hospital information</h2></div>
         <div class="table1">
             <div class="button1">
